<resources>
    <string name="app_name">ChatFirebase</string>
    <string name="entrar">Entrar</string>
    <string name="nao_tem_conta">Não tem uma conta ? Clique aqui !</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="foto">Foto</string>
    <string name="contatos">Contatos</string>
    <string name="messages">Mensagens</string>
    <string name="logout">Logout</string>
    <string name="enviar">Enviar</string>
    <string name="digite_a_mensagem">Digite a mensagem</string>
</resources>